# high_society

./: .dockerignore  .gitignore  .python-version  Dockerfile  main.py  pyproject.toml  run.sh
app/backend/: main.py  schemas.py
app/frontend/: index.html  tsconfig.tsbuildinfo
app/frontend/src/: App.tsx  api.ts  main.tsx  types.ts
app/frontend/src/components/: ActionLog.tsx  AuctionCard.tsx  GameBoard.tsx  GameOver.tsx  Lobby.tsx  MoneyCards.tsx  PlayerPanel.tsx
app/frontend/src/hooks/: useGame.ts
app/frontend/src/styles/: terminal.css
docs/: first-agent.md  notes.md  simple_rules.md
high_society/: agents.py  environment.py  main.py  networks.py  utils.py
high_society/agents/: random_agent.py
high_society/env/: environment.py
high_society/environments/: discrete.py  simple.py
scripts/: run.sh  run_cloud.py
tests/: test_auction.py  test_collect_traj.py  test_discrete_auction.py  test_discrete_collect_traj.py  test_discrete_env.py  test_discrete_game.py  test_game.py  test_vanilla_agent.py
tests/simple/: test_auction.py  test_collect_traj.py  test_game.py  test_vanilla_agent.py
